[project]
name = "loaderutils"
description = ""
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lrzjason/ComfyUI-LoaderUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lrzjason"
DisplayName = "ComfyUI-LoaderUtils"
Icon = ""
